fix(chip-group): add overflow to group (#2278)

--- a/src/patternfly/components/ChipGroup/chip-group.scss
+++ b/src/patternfly/components/ChipGroup/chip-group.scss
@@ -31,7 +31,7 @@
 
 
   &.pf-m-toolbar {
-    & > li {
+    > li:not(.pf-m-overflow) {
       display: inline-flex;
       flex-wrap: wrap;
       align-items: center;
@@ -39,6 +39,10 @@
       margin-right: var(--pf-c-chip-group__li--m-toolbar--MarginRight);
       background-color: var(--pf-c-chip-group--m-toolbar--BackgroundColor);
       border-radius: var(--pf-c-chip-group--m-toolbar-BorderRadius);
+    }
+
+    > .pf-c-chip.pf-m-overflow {
+      margin: 0;
     }
   }
 
